--- a/Ahorcado 2024/index.html
+++ b/Ahorcado 2024/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <title> Ahorcado </title>
     <script src="script.js"></script>
+    <title> Ahorcado </title>
+    
+    <link rel="stylesheet"   href="estilos.css">
 </head>
 
 <body>
+    <script src="script.js"></script>
     <center><h1>Ahorcado</h1></center>
 
-    <center><canvas id="panel" width="580" height="700" style="border:1px solid #000000;"> </canvas></center>
+    <center><canvas id="panel" width="580" height="700" style="border:5px solid #3e9268;"> </canvas></center>
+    <script>
+        var c = document.getElementById("panel");
+        var ctx = c.getContext("2d");
+        ctx.moveTo(300, 0);
+        ctx.lineTo(300, 100);
+        ctx.stroke();
+        </script>
 </body>
 
 </html>
