--- a/Ahorcado 2024/index.html
+++ b/Ahorcado 2024/index.html
@@ -22,6 +22,43 @@
         ctx.lineTo(300, 100);
         ctx.stroke();
         </script>
+    <script>
+        var c = document.getElementById("panel");
+        var ctx = c.getContext("2d");
+        ctx.beginPath();
+        ctx.arc(298, 175, 75, 0, 2 * Math.PI);
+        ctx.stroke();
+    </script>
+    <script>
+        var c = document.getElementById("panel");
+        var ctx = c.getContext("2d");
+        ctx.moveTo(300, 250);
+        ctx.lineTo(300, 470);
+        ctx.stroke();
+    </script>
+    <script>
+        var c = document.getElementById("panel");
+        var ctx = c.getContext("2d");
+        ctx.moveTo(230, 300);
+        ctx.lineTo(300, 400);
+        ctx.stroke();
+    </script>
+    <script>
+        var c = document.getElementById("panel");
+        var ctx = c.getContext("2d");
+        ctx.moveTo(380, 300);
+        ctx.lineTo(300, 400);
+        ctx.stroke();
+    </script>
+    <script>
+        var c = document.getElementById("panel");
+        var ctx = c.getContext("2d");
+        ctx.moveTo(260, 500);
+        ctx.lineTo(340, 350);
+        ctx.stroke();
+    </script>
+
+
 </body>
 
 </html>
