--- a/Ahorcado 2024/index.html
+++ b/Ahorcado 2024/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-    <script src="script.js"></script>
+    <script src="./ script.js"></script>
     <center><h1>Ahorcado</h1></center>
 
     <center><canvas id="panel" width="580" height="700" style="border:5px solid #3e9268;"> </canvas></center>
+
     <script>
         var c = document.getElementById("panel");
         var ctx = c.getContext("2d");
@@ -53,11 +54,18 @@
     <script>
         var c = document.getElementById("panel");
         var ctx = c.getContext("2d");
-        ctx.moveTo(260, 500);
-        ctx.lineTo(340, 350);
+        ctx.moveTo(300,470);
+        ctx.lineTo(200, 550);
         ctx.stroke();
     </script>
 
+    <script>
+        var c = document.getElementById("panel");
+        var ctx = c.getContext("2d");
+        ctx.moveTo(300,470);
+        ctx.lineTo(400, 550);
+        ctx.stroke();
+    </script>
 
 </body>
 
